--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -1,113 +1,66 @@
-@import './reset.css';
-@import './variables';
-
-/*
- * Globals
- */
-
-/* Links */
-a,
-a:focus,
-a:hover {
-  color: #fff;
-}
-
-/* Custom default button */
-.btn-secondary,
-.btn-secondary:hover,
-.btn-secondary:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #fff;
-  border: .05rem solid #fff;
-}
+@import 'reset';
+@import 'variables';
+@import 'home';
 
 
-/*
- * Base structure
- */
-
-html,
-body {
-  height: 100%;
-  background-color: #333;
-}
-
-body {
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: flex;
-  -ms-flex-pack: center;
-  -webkit-box-pack: center;
-  justify-content: center;
-  color: #fff;
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-}
-
-.cover-container {
-  max-width: 42em;
-}
-
-
-/*
- * Header
- */
-.masthead {
-  margin-bottom: 2rem;
-}
-
-.masthead-brand {
-  margin-bottom: 0;
-}
-
-.nav-masthead .nav-link {
-  padding: .25rem 0;
-  font-weight: 700;
-  color: rgba(255, 255, 255, .5);
-  background-color: transparent;
-  border-bottom: .25rem solid transparent;
-}
-
-.nav-masthead .nav-link:hover,
-.nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
-}
-
-.nav-masthead .nav-link + .nav-link {
-  margin-left: 1rem;
-}
-
-.nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
-}
-
-@media (min-width: 48em) {
-  .masthead-brand {
-    float: left;
+html {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+      'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: $default-text-color;
   }
-  .nav-masthead {
-    float: right;
+
+  .main-header { 
+      max-width: 100vw;
+    display: flex;
+    justify-content: center;
+
+      .my-btn { 
+          margin: 2px;
+      }
+
+      h3 { 
+          color: white;
+          margin-left: 50px;
+      }
+
+      .navBar { 
+          justify-content: center;
+          width: 75%;
+      }
+
+      .nav-links { 
+          margin-right: 50px;
+      }
   }
-}
+  
 
+//   h1 {
+//     font-size: 2.25rem;
+//   }
+  
+//   .main-header {
+//       max-width: 100vw;
+//     height: 40px;
+//     background-color: rgb(43, 126, 221);
+  
+//     .container {
+//       height: 100%;
+//       display: flex;
+//       justify-content: space-around;
+//       align-items: center;
+//     }
+  
+//     a {
+//       color: white;
+//     }
+//     > * {
+//       color: $white;
+//     }
+//   }
+  
+//   .nav-links {
 
-/*
- * Cover
- */
-.cover {
-  padding: 0 1.5rem;
-}
-.cover .btn-lg {
-  padding: .75rem 1.25rem;
-  font-weight: 700;
-}
-
-
-/*
- * Footer
- */
-.mastfoot {
-  color: rgba(255, 255, 255, .5);
-}
+//     justify-content: space-around;
+//     align-items: center;
+//     text-decoration: none; 
+//   }
