--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -1,66 +1,51 @@
 @import 'reset';
 @import 'variables';
 @import 'home';
-
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans:ital,wght@0,300;0,400;0,700;0,800;1,300&display=swap');
 
 html {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
-      'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     color: $default-text-color;
   }
 
   .main-header { 
-      max-width: 100vw;
+    z-index: 100;
+    position: relative;
+    background: transparent;
+    max-width: 100vw;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end; 
+    font-size: 2.5em;          
 
-      .my-btn { 
-          margin: 2px;
-      }
-
-      h3 { 
-          color: white;
-          margin-left: 50px;
-      }
-
-      .navBar { 
-          justify-content: center;
-          width: 75%;
-      }
 
       .nav-links { 
+          display: flex;
+          flex-direction: row;
+          justify-content: flex-end;
           margin-right: 50px;
       }
+
   }
-  
 
-//   h1 {
-//     font-size: 2.25rem;
-//   }
-  
-//   .main-header {
-//       max-width: 100vw;
-//     height: 40px;
-//     background-color: rgb(43, 126, 221);
-  
-//     .container {
-//       height: 100%;
-//       display: flex;
-//       justify-content: space-around;
-//       align-items: center;
-//     }
-  
-//     a {
-//       color: white;
-//     }
-//     > * {
-//       color: $white;
-//     }
-//   }
-  
-//   .nav-links {
+.link { 
+    text-decoration: none;
+    font-size: 0.5em;
+    color: white;
+    font-weight: bold;
+    margin: 10px 12px;
+    &:hover { 
+        text-decoration: none;
+    }
+}
 
-//     justify-content: space-around;
-//     align-items: center;
-//     text-decoration: none; 
-//   }
+h1 { 
+    font-family: 'Indie Flower', cursive;
+    color: black;
+    // text-decoration: underline;
+    font-size: 2.5em;
+}
+
+
+
+  
+  
