--- a/client/src/styles/home.scss
+++ b/client/src/styles/home.scss
@@ -1,52 +1,51 @@
-
 .wallpaper-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: url(https://imgur.com/wZjMWQb.png) no-repeat center center fixed;
+  background-size: cover;
+  height: 100%;
+  max-width: 100vw;
+  top: -60px;
+  position: relative;
+
+  .welcome-content {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: url(../media/hydepark.jpg) no-repeat center center fixed;
-    background-size: cover;
-    height: 100%;
-    max-width: 100vw;
-    top: -60px;
-    position: relative; 
+    margin-top: 100px;
+  }
+}
 
-    .welcome-content { 
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-top: 100px;
-    }
+.main-content-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  margin-top: 10px;
+  height: 400px;
+}
 
-    .main-content-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        background-color: white;
-        margin-top: 10px;
-        height: 400px;
-    }
+.about-caw-info {
+  margin-top: 65px;
+  width: 75%;
+  padding: 25px;
+}
 
-    .about-caw-info { 
-        margin-top: 65px;
-        width: 75%;
-        padding: 25px;
-    }
+.current-project-info {
+  width: 75%;
+  padding: 25px;
+}
 
-    .current-project-info {
-        width: 75%;
-        padding: 25px;
-    }
-
-    .custom-heading { 
-        font-size: 2em;
-        font-family: 'Open Sans', sans-serif;
-        font-weight: bold;
-        color: black;
-        text-decoration: underline;
-    }
+.custom-heading {
+  font-size: 2em;
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
+  color: black;
+  text-decoration: underline;
 }
 
 .img-fluid {
-    width: 500px;
-    height: 500px;
+  width: 500px;
+  height: 500px;
 }
