--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -1,51 +1,44 @@
-@import 'reset';
-@import 'variables';
-@import 'home';
-@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans:ital,wght@0,300;0,400;0,700;0,800;1,300&display=swap');
+@import "reset";
+@import "variables";
+@import "home";
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans:ital,wght@0,300;0,400;0,700;0,800;1,300&display=swap");
 
 html {
-    font-family: 'Open Sans', sans-serif;
-    color: $default-text-color;
-  }
+  font-family: "Open Sans", sans-serif;
+  color: $default-text-color;
+}
 
-  .main-header { 
-    z-index: 100;
-    position: relative;
-    background: transparent;
-    max-width: 100vw;
+.main-header {
+  z-index: 100;
+  position: relative;
+  background: transparent;
+  max-width: 100vw;
+  display: flex;
+  justify-content: flex-end;
+  font-size: 2.5em;
+
+  .nav-links {
     display: flex;
-    justify-content: flex-end; 
-    font-size: 2.5em;          
-
-
-      .nav-links { 
-          display: flex;
-          flex-direction: row;
-          justify-content: flex-end;
-          margin-right: 50px;
-      }
-
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-right: 50px;
   }
+}
 
-.link { 
+.link {
+  text-decoration: none;
+  font-size: 0.5em;
+  color: white;
+  font-weight: bold;
+  margin: 10px 12px;
+  &:hover {
     text-decoration: none;
-    font-size: 0.5em;
-    color: white;
-    font-weight: bold;
-    margin: 10px 12px;
-    &:hover { 
-        text-decoration: none;
-    }
+  }
 }
 
-h1 { 
-    font-family: 'Indie Flower', cursive;
-    color: black;
-    // text-decoration: underline;
-    font-size: 2.5em;
+h1 {
+  font-family: "Indie Flower", cursive;
+  color: black;
+  // text-decoration: underline;
+  font-size: 2.5em;
 }
-
-
-
-  
-  
