--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -16,8 +16,9 @@ html {
   display: flex;
   justify-content: flex-end;
   font-size: 2.5em;
+  text-decoration: none;
 
-  .nav-links {
+  .nav-links-caw {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
@@ -26,15 +27,17 @@ html {
   }
 }
 
-.link {
+.link-caw {
   text-decoration: none;
   font-size: 0.5em;
   color: white;
   font-weight: bold;
   margin: 10px 12px;
   transition: 0.5s;
+  text-decoration-line: underline;
   &:hover {
-    color: blue;
+    color: #7ebda0;
+    text-decoration-line: underline;
   }
 }
 
