restyled content of main

--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -1,7 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans:ital,wght@0,300;0,400;0,700;0,800;1,300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;1,700&display=swap");
+
 $black: #000000;
 $white: #ffffff;
 
 $dark-gray: #2f3542;
+$heading-color: #212121;
 $primary: #2f3542;
 
 $default-text-color: $dark-gray;
