--- a/client/src/styles/home.scss
+++ b/client/src/styles/home.scss
@@ -24,25 +24,40 @@
   background-color: white;
   margin-top: 10px;
   height: 400px;
-}
 
-.about-caw-info {
-  margin-top: 65px;
-  width: 75%;
-  padding: 25px;
-}
+  .about-caw-info {
+    width: 75%;
+    padding: 25px;
+  }
 
-.current-project-info {
-  width: 75%;
-  padding: 25px;
-}
+  .current-project-info {
+    width: 75%;
+    padding: 25px;
+  }
 
-.custom-heading {
-  font-size: 2em;
-  font-family: "Open Sans", sans-serif;
-  font-weight: bold;
-  color: black;
-  text-decoration: underline;
+  .custom-heading {
+    font-size: 30px;
+    font-family: "Noto Serif", serif;
+    font-weight: bold;
+    color: $heading-color;
+    //   text-decoration: underline;
+    margin-bottom: 20px;
+  }
+
+  .text-wrapper {
+    padding: 25px;
+    width: 75%;
+    height: 75%;
+  }
+
+  hr {
+    position: absolute;
+    border: none;
+    height: 4px;
+    // background-color: #ffba5a;
+    background-color: #7ebda0;
+    width: 250px;
+  }
 }
 
 .img-fluid {
