--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -8,7 +8,7 @@ html {
 }
 
 .main-header {
-  z-index: 100;
+  z-index: 1;
   position: relative;
   background: transparent;
   max-width: 100vw;
@@ -26,6 +26,63 @@ html {
   }
 }
 
+.burger {
+  display: none;
+  cursor: pointer;
+}
+
+.burger div{
+  width: 25px;
+  height: 2px;
+  background-color: #ffffeb;
+  margin: 5px;
+  transition: all 0.25s ease;
+}
+
+.toggle .line1{
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.toggle .line2{
+  opacity: 0;
+}
+
+.toggle .line3{
+  transform: rotate(45deg) translate(-5px, -6px);
+}
+
+
+@media screen and (max-width: 768px){
+  body {
+    overflow-x: hidden;
+  }
+  .nav-links-caw{
+    position: fixed;
+    right: 0;
+    top: 0;
+    height: 100vh;
+    background-color: #7ebda0;
+    visibility: hidden;
+    width: 50%;
+    transform: translateX(40%);
+    transition: 0.5s;
+  }
+
+  .nav-drawer{
+    visibility: visible;
+    color: white;
+
+  }
+
+  // .nav-links-caw li{
+  //   opacity: 0;
+  // }
+
+  .burger{
+    display: block;
+  }
+}
+
 .link-caw {
   text-decoration: none;
   font-size: 0.5em;
@@ -34,16 +91,13 @@ html {
   margin: 10px 12px;
   transition: 0.5s;
   text-decoration-line: underline;
-
   &:hover {
     color: #7ebda0;
-    text-decoration-line: underline;
   }
 }
 
 h1 {
   font-family: "Indie Flower", cursive;
   color: black;
-  // text-decoration: underline;
   font-size: 2.5em;
 }
