added all of the content from google docs

--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -6,7 +6,8 @@ $white: #ffffff;
 
 $dark-gray: #2f3542;
 $heading-color: #212121;
-$primary: #2f3542;
+$primary: #7ebda0;
+$primary-green: #7ebda0;
 
 $default-text-color: $dark-gray;
 $primary-nav-bg: $primary;
