--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -61,17 +61,18 @@ html {
     position: fixed;
     right: 0;
     top: 0;
-    height: 100vh;
-    background-color: #7ebda0;
+    // height: 100vh;
+    // background-color: #7ebda0;
     visibility: hidden;
-    width: 50%;
-    transform: translateX(40%);
-    transition: 0.5s;
+    // width: 50%;
+    // transform: translateX(40%);
+    transition: 0.5s ease-in-out;
   }
 
   .nav-drawer{
     visibility: visible;
     color: white;
+    transition: 0.5s ease-in-out;
   }
 
   .link-caw li {
