--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -8,6 +8,7 @@ $dark-gray: #2f3542;
 $heading-color: #212121;
 $primary: #7ebda0;
 $primary-green: #7ebda0;
+$light-green: #7ebda057;
 
 $default-text-color: $dark-gray;
 $primary-nav-bg: $primary;
