--- a/client/src/styles/home.scss
+++ b/client/src/styles/home.scss
@@ -28,6 +28,17 @@
   .info-wrapper {
     width: 75%;
     padding: 25px;
+
+    &.current-project {
+      padding-bottom: 0px;
+    }
+  }
+
+  .background-wrapper {
+    background-color: $light-green;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .custom-heading {
@@ -51,25 +62,46 @@
     padding-top: 50px;
     padding-right: 50px;
     padding-left: 50px;
-
+    padding-bottom: 50px;
     width: 100%;
     height: 100%;
   }
 
-  hr {
+  .submitting-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .text-wrapper-main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+    padding-right: 50px;
+    padding-left: 50px;
+    width: 100%;
+    height: 100%;
+  }
+
+  .hr {
     position: absolute;
     border: none;
     height: 4px;
     background-color: $primary-green;
     width: 220px;
-  }
 
-  .winning-project {
-    position: absolute;
-    border: none;
-    height: 4px;
-    background-color: $primary-green;
-    width: 600px;
+    &.white {
+      // background-color: $white;
+    }
+
+    &.winning {
+      width: 590px;
+    }
+
+    &.atn {
+      width: 270px;
+    }
   }
 
   .sub-text {
@@ -78,6 +110,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    &-submit {
+      text-align: center;
+    }
+    // text-align: center;
   }
 
   p {
