grids in home page

--- a/client/src/styles/home.scss
+++ b/client/src/styles/home.scss
@@ -151,3 +151,18 @@
   flex-direction: row;
   justify-content: center;
 }
+
+.my-container {
+  border: 2px red solid;
+
+  .my-row {
+    border: 1px green solid;
+    margin: 5px;
+  }
+
+  .my-column {
+    border: 1px blue solid;
+    padding: 5px;
+    margin: 5px;
+  }
+}
