--- a/client/src/styles/_footer.scss
+++ b/client/src/styles/_footer.scss
@@ -16,7 +16,7 @@
     padding: 0;
     list-style: none;
     text-align: center;
-    font-size: 18px;
+    font-size: 1.1rem;
     line-height: 1.6;
     margin-bottom: 0;
   }
@@ -26,10 +26,10 @@
   }
 
   .contact-us {
-    margin-top: 15px;
+    margin-top: 1rem;
     margin-bottom: 0px;
     text-align: center;
-    font-size: large;
+    font-size: 1rem;
   }
 }
 
@@ -49,7 +49,7 @@
 }
 
 .footer-basic .social > a {
-  font-size: 24px;
+  font-size: 2.5vw;
   width: 40px;
   height: 40px;
   line-height: 40px;
@@ -69,7 +69,7 @@
 .footer-basic .copyright {
   margin-top: 15px;
   text-align: center;
-  font-size: 13px;
+  font-size: 0.7rem;
   color: rgb(230, 228, 228);
   margin-bottom: 0;
 }
