--- a/client/src/styles/_footer.scss
+++ b/client/src/styles/_footer.scss
@@ -37,6 +37,7 @@
   color: inherit;
   text-decoration: none;
   opacity: 0.8;
+  transition: 1s;
 }
 
 .footer-basic ul a:hover {
@@ -60,10 +61,11 @@
   margin: 0 8px;
   color: inherit;
   opacity: 0.75;
+  transition: 1s;
 }
 
 .footer-basic .social > a:hover {
-  opacity: 0.9;
+  opacity: 1;
 }
 
 .footer-basic .copyright {
