--- a/client/src/styles/home.scss
+++ b/client/src/styles/home.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: url(hydepark.jpg) no-repeat center center fixed;
+  background: url(./hydepark.jpg) no-repeat center center fixed;
   background-size: cover;
   height: 100%;
   max-width: 100vw;
