--- a/client/src/styles/_footer.scss
+++ b/client/src/styles/_footer.scss
@@ -10,7 +10,7 @@
   padding: 40px 0;
   background-color: $primary-green;
   color: $white;
-  width: 100vw;
+  width: 100%;
 
   ul {
     padding: 0;
