--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -9,6 +9,7 @@ $heading-color: #212121;
 $primary: #7ebda0;
 $primary-green: #7ebda0;
 $light-green: #7ebda057;
+$light2-green: #85ddb457;
 
 $default-text-color: $dark-gray;
 $primary-nav-bg: $primary;
