--- a/client/src/styles/feedback.scss
+++ b/client/src/styles/feedback.scss
@@ -1,11 +1,11 @@
-.submission-content {
+.feedback-content {
   max-width: 100%;
   height: 50vh;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-
   h3 {
     padding-top: 25px;
   }
