--- a/client/src/styles/home.scss
+++ b/client/src/styles/home.scss
@@ -157,6 +157,24 @@
     height: 50vh;
   }
 
+  .main-content-container {
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
+    // background-color: white;
+    // margin-top: 10px;
+    // height: 200vh;
+
+    .info-wrapper {
+      width: 100%;
+      padding: 25px;
+
+      &.current-project {
+        padding-bottom: 0px;
+      }
+    }
+  }
+
   .footer {
     width: 100vw;
     left: 0;
