--- a/client/src/styles/feedback.scss
+++ b/client/src/styles/feedback.scss
@@ -1,7 +1,11 @@
 .feedback-content {
   max-width: 100%;
   height: 50vh;
-
+  display:-webkit-flex;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
   display: flex;
   flex-direction: column;
   align-items: center;
