--- a/client/src/styles/home.scss
+++ b/client/src/styles/home.scss
@@ -1,4 +1,9 @@
 .wallpaper-container {
+  display:-webkit-flex;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,6 +16,11 @@
   position: relative;
 
   .welcome-content {
+    display:-webkit-flex;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -moz-flex;
+    display: -ms-flexbox;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -19,6 +29,11 @@
 }
 
 .main-content-container {
+  display:-webkit-flex;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -37,6 +52,11 @@
 
   .background-wrapper {
     background-color: $light-green;
+    display:-webkit-flex;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -moz-flex;
+    display: -ms-flexbox;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -57,6 +77,11 @@
   }
 
   .text-wrapper {
+    display:-webkit-flex;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -moz-flex;
+    display: -ms-flexbox;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -69,12 +94,22 @@
   }
 
   .submitting-wrapper {
+    display:-webkit-flex;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -moz-flex;
+    display: -ms-flexbox;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
 
   .text-wrapper-main {
+    display:-webkit-flex;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -moz-flex;
+    display: -ms-flexbox;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -102,6 +137,11 @@
   }
 
   .heading-wrapper {
+    display:-webkit-flex;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -moz-flex;
+    display: -ms-flexbox;
     display: flex;
     flex-direction: column;
     align-items: left;
