--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -16,12 +16,22 @@ html {
   position: relative;
   background: transparent;
   max-width: 100vw;
+  display:-webkit-flex;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
   display: flex;
   justify-content: flex-end;
   font-size: 2.5em;
   text-decoration: none;
 
   .nav-links-caw {
+    display:-webkit-flex;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -moz-flex;
+    display: -ms-flexbox;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
