--- a/client/src/styles/home.scss
+++ b/client/src/styles/home.scss
@@ -5,6 +5,7 @@
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
+  flex: 0 0 auto;
   flex-direction: column;
   align-items: center;
   background: url(./bg-50.jpeg) no-repeat center center fixed;
@@ -22,6 +23,7 @@
     display: -moz-flex;
     display: -ms-flexbox;
     display: flex;
+    flex: 0 0 auto;
     flex-direction: column;
     align-items: center;
     margin-top: 100px;
@@ -35,6 +37,7 @@
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
+  flex: 0 0 auto;
   flex-direction: column;
   align-items: center;
   background-color: white;
@@ -58,6 +61,7 @@
     display: -moz-flex;
     display: -ms-flexbox;
     display: flex;
+    flex: 0 0 auto;
     flex-direction: column;
     align-items: center;
   }
@@ -83,6 +87,7 @@
     display: -moz-flex;
     display: -ms-flexbox;
     display: flex;
+    flex: 0 0 auto;
     flex-direction: column;
     align-items: center;
     padding-top: 50px;
@@ -100,6 +105,7 @@
     display: -moz-flex;
     display: -ms-flexbox;
     display: flex;
+    flex: 0 0 auto;
     flex-direction: column;
     align-items: center;
   }
@@ -111,6 +117,7 @@
     display: -moz-flex;
     display: -ms-flexbox;
     display: flex;
+    flex: 0 0 auto;
     flex-direction: column;
     align-items: center;
     padding-top: 50px;
@@ -143,6 +150,7 @@
     display: -moz-flex;
     display: -ms-flexbox;
     display: flex;
+    flex: 0 0 auto;
     flex-direction: column;
     align-items: left;
 
@@ -158,6 +166,7 @@
     margin-top: 0px;
     padding-top: 0px;
     display: flex;
+    flex: 0 0 auto;
     flex-direction: column;
     align-items: center;
 
