--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -22,6 +22,7 @@ html {
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
+  flex: 0 0 auto;
   justify-content: flex-end;
   font-size: 2.5em;
   text-decoration: none;
@@ -33,6 +34,7 @@ html {
     display: -moz-flex;
     display: -ms-flexbox;
     display: flex;
+    flex: 0 0 auto;
     flex-direction: row;
     justify-content: flex-end;
     text-decoration: none;
