--- a/client/src/styles/feedback.scss
+++ b/client/src/styles/feedback.scss
@@ -1,7 +1,7 @@
 .feedback-content {
   max-width: 100%;
   height: 50vh;
-  display:-webkit-flex;
+  display: -webkit-flex;
   display: -webkit-box;
   display: -moz-box;
   display: -moz-flex;
@@ -12,5 +12,14 @@
   text-align: center;
   h3 {
     padding-top: 25px;
+  }
+
+  .my-container {
+    padding: 25px;
+    border: 2px solid red;
+  }
+
+  .my-row {
+    border: 2px dotted blue;
   }
 }
