--- a/client/src/styles/feedback.scss
+++ b/client/src/styles/feedback.scss
@@ -1,6 +1,7 @@
 .feedback-content {
   max-width: 100%;
-  height: 50vh;
+  height: auto;
+  margin-bottom: 50px;
   display: -webkit-flex;
   display: -webkit-box;
   display: -moz-box;
@@ -13,13 +14,17 @@
   h3 {
     padding-top: 25px;
   }
+}
 
-  .my-container {
-    padding: 25px;
-    border: 2px solid red;
-  }
+.submission-list {
+  padding: 25px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-  .my-row {
-    border: 2px dotted blue;
-  }
+.submissions-wrapper {
+  // display: flex;
+  // justify-content: center;
+  padding: 20px 0px;
 }
