--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -9,7 +9,6 @@
 html {
   font-family: "Open Sans", sans-serif;
   color: $default-text-color;
-  // overflow-x: hidden;
 }
 
 .main-header {
@@ -73,14 +72,11 @@ html {
     overflow-x: hidden;
   }
   .nav-links-caw {
-    position: fixed;
+    position: absolute;
+    width: 100vw;
     right: 0;
     top: 0;
-    // height: 100vh;
-    // background-color: #7ebda0;
     visibility: hidden;
-    // width: 50%;
-    // transform: translateX(40%);
     transition: 0.5s ease-in-out;
   }
 
@@ -90,10 +86,6 @@ html {
     transition: 0.5s ease-in-out;
   }
 
-  a {
-    // font-size: 10vw;
-  }
-
   a .link-caw {
     font-size: 2.5vw;
   }
@@ -101,7 +93,6 @@ html {
     list-style-type: none;
     text-align: center;
     line-height: 25px;
-    // background-color: red;
   }
 
   .burger {
@@ -111,14 +102,13 @@ html {
 
 @media screen and (max-width: $mobile) {
   a .link-caw {
-    font-size: 2vw;
+    font-size: 3vw;
   }
 
   .link-caw {
     list-style-type: none;
     text-align: center;
     line-height: 25px;
-    // background-color: red;
   }
 }
 
