--- a/client/src/styles/_card.scss
+++ b/client/src/styles/_card.scss
@@ -4,10 +4,10 @@
   border: 0.5px solid rgba(128, 128, 128, 0.37);
 
   .img-fluid {
-    width: 250xp;
-    height: 250px;
-    object-fit: contain;
+    width: 100%;
+    height: 100%;
   }
+
   .card-body {
     padding: 2rem;
     height: 100%;
@@ -19,5 +19,14 @@
 
   .card-text {
     padding: 1rem 0;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .card {
+    padding: 0;
+    width: 100vm;
+    font-size: 0.75rem;
+    border: red solid 2px;
   }
 }
