created single submission page component and linked with the submissions page

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -5,6 +5,7 @@
 @import "submission";
 @import "card";
 @import "feedback";
+@import "singleSubmission";
 
 html {
   font-family: "Open Sans", sans-serif;
