--- a/client/src/styles/_singleSubmission.scss
+++ b/client/src/styles/_singleSubmission.scss
@@ -2,4 +2,36 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100vw;
+  height: auto;
+
+  .custom-heading {
+    font-size: 2rem;
+    font-family: "Noto Serif", serif;
+    font-weight: bold;
+    color: $heading-color;
+  }
+
+  .heading {
+    font-weight: bold;
+    margin-bottom: 15px;
+  }
+  .container {
+    .row-image {
+      display: flex;
+      justify-content: center;
+    }
+    .carousel-wrapper {
+      border: blue solid 2px;
+
+      height: 400px;
+      width: 400px;
+    }
+    .row {
+      //   border: solid $medium-green 2px;
+      background-color: $light-green;
+      padding: 7.5% 5%;
+      margin: 5%;
+    }
+  }
 }
