added hyperlink to example submission

--- a/client/src/styles/submission.scss
+++ b/client/src/styles/submission.scss
@@ -32,6 +32,16 @@
   }
 }
 
+.link-to-example {
+  text-decoration: none;
+  color: black;
+  text-decoration: underline;
+  transition: 1s;
+  &:hover {
+    color: $primary-green;
+  }
+}
+
 .form-container {
   display: -webkit-flex;
   display: -webkit-box;
