centered recaptcha and added mobile styles for submission form

--- a/client/src/styles/submission.scss
+++ b/client/src/styles/submission.scss
@@ -32,7 +32,6 @@
   }
 }
 
-
 .link-to-example {
   text-decoration: none;
   color: black;
@@ -47,11 +46,9 @@
   transition: none;
 }
 
-
 .btn {
   transition: none;
 }
-
 
 .form-container {
   display: -webkit-flex;
@@ -78,14 +75,19 @@
   display: flex;
   flex: 0 0 auto;
   flex-direction: column;
-  align-items: left;
+  align-items: center;
   padding: 25px;
   margin: 25px 0px;
+
+  .btn {
+    width: 75%;
+  }
 
   .sub-label {
     padding: 0px;
     padding-bottom: 5px;
     font-style: italic;
+    line-height: 125%;
   }
   .text-area {
     height: 125px;
@@ -100,5 +102,69 @@
 
   .submission-item {
     border: 2px red solid;
+  }
+
+  #g-recaptcha {
+    // background-color: red;
+    display: flex;
+    justify-content: center;
+    margin: 25px;
+    // transform: scale(0.77);
+    // -webkit-transform: scale(0.77);
+    // transform-origin: 0 0;
+    // -webkit-transform-origin: 0 0;
+  }
+}
+
+@media screen and (max-width: $mobile) {
+  .img-fluid {
+    max-width: 100vw;
+    height: 50vh;
+  }
+
+  .submission-content {
+    padding: 0;
+    margin: 0;
+
+    .custom-heading {
+      font-size: 1.4rem;
+    }
+
+    .pretext-wrapper {
+      width: 90%;
+      font-size: 0.8rem;
+    }
+  }
+
+  .form-container {
+    margin: 0;
+
+    .submission-form {
+      width: 95%;
+      font-size: 0.8rem;
+
+      #g-recaptcha {
+        // display: flex;
+        // justify-content: center;
+
+        // div {
+        //   transform: scale(0.9);
+        //   -webkit-transform: scale(0.9);
+        //   transform-origin: 0 0;
+        //   -webkit-transform-origin: 0 0;
+        // }
+      }
+    }
+  }
+
+  .footer {
+    width: 100vw;
+    left: 0;
+    bottom: 0px;
+    height: 50px;
+    background-color: $primary-green;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
 }
