redesigned single submission page

--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -6,6 +6,7 @@ $white: #ffffff;
 
 $dark-gray: #2f3542;
 $heading-color: #212121;
+$submission-header: #e0e0e0;
 $primary: #7ebda0;
 $primary-green: #7ebda0;
 $light-green: #7ebda057;
