added mobile design for single submission page

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -6,6 +6,7 @@
 @import "card";
 @import "feedback";
 @import "singleSubmission";
+@import "comments";
 
 html {
   font-family: "Open Sans", sans-serif;
