--- a/client/src/styles/_singleSubmission.scss
+++ b/client/src/styles/_singleSubmission.scss
@@ -29,27 +29,20 @@
     margin-bottom: 10px;
   }
 
-  // .hr-divider {
-  //   border: none;
-  //   border-radius: 50px;
-  //   height: 50px;
-  //   background-color: $black;
-  //   width: 100%;
-  // }
-
   .description {
     margin-top: 25px;
   }
 
-  .container {
+  .single-submission-container {
     padding: 0px;
     margin: 0px;
     color: white;
+
     .carousel-wrapper {
       height: 400px;
       width: 400px;
     }
-    .row {
+    .my-row {
       padding: 7.5% 5%;
       margin: 5%;
       background-color: $primary-green;
@@ -57,8 +50,7 @@
     }
 
     .row-image {
-      width: 500px;
-      height: 400px;
+      background-color: $primary-green;
       display: flex;
       justify-content: center;
       padding: 0px;
@@ -81,5 +73,28 @@
     .carousel-indicators {
       bottom: -25px;
     }
+  }
+}
+
+@media screen and (max-width: $mobile) {
+  .content-wrapper {
+    .my-row {
+      p {
+        font-size: 1rem;
+      }
+    }
+    .heading {
+      font-size: 1.2rem;
+    }
+  }
+  .footer {
+    width: 100vw;
+    left: 0;
+    bottom: 0px;
+    height: 50px;
+    background-color: $primary-green;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
 }
