--- a/client/src/styles/_singleSubmission.scss
+++ b/client/src/styles/_singleSubmission.scss
@@ -82,9 +82,26 @@
       p {
         font-size: 1rem;
       }
+      .image-col {
+        margin: 30px 0px;
+      }
     }
     .heading {
       font-size: 1.2rem;
+    }
+
+    .single-submission-container {
+      .carousel-control-prev {
+        left: -35px;
+      }
+
+      .carousel-control-next {
+        right: -35px;
+      }
+
+      .carousel-indicators {
+        bottom: -25px;
+      }
     }
   }
   .footer {
